--- a/scibert_summaries.ipynb
+++ b/scibert_summaries.ipynb
@@ -32,7 +32,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# Running Bert Extractive Summarizer"
+        "# Use SciBERT and fine-tuned SciBERT for extractive summarization.\n",
+        "Credits: Adapted version of original [notebook](https://github.com/dmmiller612/bert-extractive-summarizer) by Derek Miller."
       ]
     },
     {
@@ -43,7 +44,7 @@
         "colab": {}
       },
       "source": [
-        "!pip install bert-extractive-summarizer==0.4.2"
+        "!pip install bert-extractive-summarizer==0.4.2\n"
       ],
       "execution_count": 0,
       "outputs": []
